src/App.css
body {
  background-color: #222831;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

h1,
h2,
h3, h4, h5 {
  font-weight: 300;
  margin: 0px 0px 20px 0px;
}

h1,
h2,
h3,
h4 {
  color: lightblue;
  font-size: 2em;
}

h4 {
  font-size: 1.5em;
}

p {
  color: #93ec73;
  font-size: 18px;
}

pre {
  font-size: 1em;
}

ul {
  list-style: none;
  padding: 0;
  font-family: 'Courier New', Courier, monospace;
  font-size: 1.2em;
  margin: 5px 0px 5px 20px;
  color: #e9715c;
}
a {
  color: #e9715c;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
  color: lightseagreen;
}

ul span {
  color: greenyellow;
}
section > ul {
  list-style: none;
  padding: 0;
  font-family: 'Courier New', Courier, monospace;
  font-size: 1.2em;
  color: #e9715c;
}

.container {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (max-width: 750px) {
  .container {
    flex-direction: column;
  }
  ul {
    margin: 5px 0px 5px 40px;
  }
}

.leftSide {
  padding: 1em;
  border-right: solid 1px;
  border-left: solid 0px;
  border-image: linear-gradient(to bottom, #e9715c, rgba(0, 0, 0, 0)) 1 100%;
}

.rightSide {
  padding: 1em;
}

.leftSide > div {
  font-family: 'Courier New', Courier, monospace;
}

.leftSide h3 {
  color: lightblue;
}

.rightSide > div:first-of-type {
  display: flex;
  justify-content: center;
}

.rightSide img {
  max-width: 250px;
  max-height: 250px;
  border-radius: 50%;
  margin-top: 40px;
  margin-bottom: 40px;
  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 10);
}

